@@ -30,3 +30,10 @@
     - Made it so that the cost is displayed in the queue display
     - Made it so that the cost is in the text log
     - Added a timestamp to the log so that you can actually tell when an order was placed
+
+(10/15/2023)
+- Classes.py
+    - Added the ability to initialize the EntryBox packed by passing True or False into the function
+
+- Queue.py
+    - Updated the special orders box to use the custom EntryBox class
